--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,6 @@
       rel="stylesheet"
     />
 
-  
     <title>Shobhit</title>
     <link
       rel="stylesheet"
@@ -30,6 +29,53 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+
+    <!-- SEO Optimization -->
+    <title>Shobhit Sharma | React Developer & C++ Enthusiast</title>
+    <meta
+      name="description"
+      content="Official portfolio of Shobhit Sharma — React developer and C++ enthusiast. Projects, skills, contact."
+    />
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://shobhit-ten.vercel.app/" />
+
+    <!-- Open Graph (for rich previews) -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Shobhit Sharma | React Developer" />
+    <meta
+      property="og:description"
+      content="Official portfolio of Shobhit Sharma — React developer and C++ enthusiast."
+    />
+    <meta property="og:url" content="https://shobhit-ten.vercel.app/" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Shobhit Sharma | React Developer" />
+    <meta
+      name="twitter:description"
+      content="React, C++, and full-stack projects by Shobhit Sharma."
+    />
+
+    <!-- Optional but fine -->
+    <meta
+      name="keywords"
+      content="Shobhit, Shobhit Sharma, React Developer, C++"
+    />
+
+    <!-- Structured Data: tell Google this is a Person’s site -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Shobhit Kumar Sharma",
+        "url": "https://shobhit-ten.vercel.app/",
+        "jobTitle": "React Developer",
+        "sameAs": [
+          "https://github.com/Shobhit070304",
+          "https://www.linkedin.com/in/shobhit-kumar-sharma-17bb4223a/"
+        ]
+      }
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
