--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,29 @@
       name="description"
       content="Web site created using create-react-app"
     />
+
+    
+    <!-- Performance: Preload main CSS and JS -->
+    <link rel="preload" href="/index.css" as="style" />
+    <link rel="preload" href="/static/js/bundle.js" as="script" />
+    <!-- DNS Prefetch for external resources -->
+    <link rel="dns-prefetch" href="//fonts.googleapis.com" />
+    <link rel="dns-prefetch" href="//fonts.gstatic.com" />
+    <link rel="dns-prefetch" href="//cdnjs.cloudflare.com" />
+    <!-- Preconnect for faster font loading -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <!-- Set X-UA-Compatible for legacy browser support -->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <!-- Set cache control for static assets -->
+    <meta http-equiv="Cache-control" content="public, max-age=31536000" />
+    <!-- Viewport for mobile optimization -->
+    <meta name="HandheldFriendly" content="true" />
+    <meta name="MobileOptimized" content="320" />
+
+
+
+
     <!-- google fonts -->
     <link
       href="https://fonts.googleapis.com/css2?family=Aldrich&family=Orbitron:wght@400;500;600;700;800;900&family=Rajdhani:wght@300;400;500;600;700&display=swap"
